--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>제목1</h1>
-    <h2>제목2</h2>
-    <h3>제목3</h3>
-    <a href="http://www.cnu.ac.kr" target="_blank">학교홈페이지</a>를 <br>확인해주세요.
-    <a href="http://naver.com">네이버</a>
-    <img src="그림/imagesss.jpg" alt="또 개">
+    <h1>충남대학교</h1>
+    <h2>인문대학</h2>
+    <h3>철학과</h3>
     <ul>
-        <li>웹개발</li>
-        <li>데이터 분석</li>
+        <li>서양철학사</li>
+        <li>동양철학사</li>
     </ul>
     <ol>
-        <li>물끓이기</li>
-        <li>면넣기</li>
+        <li>개강총회</li>
+        <li>선대철학답사</li>
     </ol>
 </body>
+
 </html>
