--- a/index.html
+++ b/index.html
@@ -4,19 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body{background-color: rgb(240, 240, 165);}
+        header {height: 35%;
+            background-color: rgb(123, 221, 188);}
+
+    </style>
 </head>
 <body>
-    <h1>충남대학교</h1>
-    <h2>인문대학</h2>
-    <h3>철학과</h3>
-    <ul>
-        <li>서양철학사</li>
-        <li>동양철학사</li>
-    </ul>
-    <ol>
-        <li>개강총회</li>
-        <li>선대철학답사</li>
-    </ol>
-</body>
+    <!-- 시멘틱태그 구조화 -->
+    <header><h1>충남대학교</h1></header>
+    <hr>
+    <nav><h2>인문대학</h2></nav>
+    <hr>
+    <section><h3>철학과</h3></section>
+    <aside>
+           <ul>1학기
+            <li>서양철학사</li>
+            <li>동양철학사</li>
+           </ul>
+           <ul>2학기
+            <li>서양고대철학의이해</li>
+            <li>인간과 불교</li>
 
+           </ul>
+        
+    </aside>
+    <footer>footer</footer>
+    &nbsp;
+    <img src="그림/다운로드.png" width="400" height="300" alt="강아지">
+    <hr>
+    
+<div style="background-color: rgb(228, 189, 138);padding: 50px;">
+    <p>
+        선대철학답사 <span style="color: aquamarine;">2박 3일</span>
+    </p>
+
+</div>
+<div style="background-color: rgb(95, 158, 160); padding: 30px;" " width: 30px; height: 20;">
+
+</div>
+
+</body>
 </html>
